--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "axios": "^0.21.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.8",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
